# MTInterpreter

./: .gitignore  CMakeLists.txt  ErrorHandler.cpp  ErrorHandler.h  Parser.cpp  Parser.h  README.md  Scaner.cpp  Scaner.h  TokenSource.h  main.cpp
DataSource/: DataSource.h  FileDataSource.cpp  FileDataSource.h  StringDataSource.cpp  StringDataSource.h
Interpreter/: Interpreter.cpp  Interpreter.h  InterpreterExpressionTree.cpp  InterpreterExpressionTree.h  SemanticAnalizer.cpp  SemanticAnalizer.h  SemanticAnalyzer.cpp  SemanticAnalyzer.h  SemanticExpressionTree.h  Visitor.h
SyntaxTree/: AssignNode.h  Block.cpp  Block.h  EvaluableSyntaxTreeElement.h  Expression.cpp  Expression.h  ForNode.h  FunCall.cpp  FunCall.h  FunctionNode.cpp  FunctionNode.h  IfNode.h  InitNode.h  Line.cpp  Line.h  MappedSyntaxTree.cpp  MappedSyntaxTree.h  Parameter.cpp  Parameter.h  ReturnNode.h  SyntaxTree.h  SyntaxTreeElement.h  WhileNode.h
Tests/: CMakeLists.txt  Test.cpp  TestUtils.h  example.txt
Token/: Assign.cpp  Assign.h  Conversion.cpp  Conversion.h  ErrorToken.cpp  ErrorToken.h  IdToken.cpp  IdToken.h  LogicOp.cpp  LogicOp.h  LoopMod.cpp  LoopMod.h  MultOp.cpp  MultOp.h  Number.cpp  Number.h  RelOp.cpp  RelOp.h  StringToken.cpp  StringToken.h  Token.cpp  Token.h  TypeName.cpp  TypeName.h  Util.cpp  Util.h
